# astro-accelerate

./: .clang-format  .gitignore  .gitlab-ci.yml  .zenodo.json  CITATION.cff  CMakeLists.txt  COLLABORATORS  COLLABORATORS.md  CONTRIBUTING.md  LICENSE  MANUAL.md  Makefile  README  README.md  astro-accelerate.sh  astroaccelerate.pc.in  bootstrap.sh  dedisperse-gpu  device_bin.cu  device_binning_kernel.cu  device_corner_turn.cu  device_corner_turn.h  device_corner_turn_kernel.cu  device_dedisperse.cu  device_dedisperse.h  device_dedispersion_kernel.cu  device_dedispersion_kernel.h  device_init.cu  device_init.h  device_load_data.cu  device_load_data.h  device_main.cu  device_malloc.cu  device_save_data.cu  device_save_data.h  device_set_pointers_kernel.cu  headers_mains.h  host_allocate_memory.cu  host_allocate_memory.h  host_analysis.c  (+22 more)
.github/: pull_request_template.md
astrolib/: libastrolib.a.REMOVED.git-id
cmake/: CMakeCache.txt  Doxyfile.in  DoxyfileAPI.in  FindPackageHandleCompat.cmake  FindPanda.cmake  code_coverage.cmake  compiler_settings.cmake  cuda.cmake  dependencies.cmake  doxygen.cmake  git_version.cmake  googletest.cmake  py_astro_accelerate.py.in  subpackage.cmake  tags.cmake  valgrind.cmake  version.h.in
doc/: developers_guide.md  user_guide.md
examples/: CMakeLists.txt  dedispersion.cpp  dedispersion_and_analysis.cpp  filterbank_dedispersion.cpp  meson.build
examples/src/: autotune_test.cpp  dedispersion.cpp  dedispersion_and_analysis.cpp  fake_signal.cpp  fake_signal_periodic.cpp  fake_signal_single.cpp  filterbank_dedispersion.cpp  periodicity.cpp
include/: FilterBankDataMeta.hpp  aa_analysis_plan.hpp  aa_analysis_strategy.hpp  aa_bin_gpu.hpp  aa_cheetah_input.hpp  aa_compute.hpp  aa_config.hpp  aa_corner_turn.hpp  aa_ddtr_pipeline.hpp  aa_ddtr_plan.hpp  aa_ddtr_strategy.hpp  aa_dedisperse.hpp  aa_dedispersion_range.hpp  aa_device_BC_plan.hpp  aa_device_MSD.hpp  aa_device_MSD_Configuration.hpp  aa_device_MSD_grid.hpp  aa_device_MSD_normal_kernel.hpp  aa_device_MSD_outlier_rejection_kernel.hpp  aa_device_MSD_plane_profile.hpp  aa_device_MSD_shared_kernel_functions.cuh  aa_device_MSD_shared_kernel_functions.hpp  aa_device_SNR_limited.hpp  aa_device_SNR_limited_inplace_kernel.hpp  aa_device_SNR_limited_kernel.hpp  aa_device_SPS_inplace.hpp  aa_device_SPS_inplace_kernel.hpp  aa_device_SPS_long.hpp  aa_device_SPS_long_kernel.hpp  aa_device_acceleration_fdas.hpp  aa_device_analysis.hpp  aa_device_binning_kernel.hpp  aa_device_convolution.hpp  aa_device_convolution_kernel.hpp  aa_device_corner_turn_kernel.hpp  aa_device_cuda_deprecated_wrappers.cuh  aa_device_dedispersion_kernel.hpp  aa_device_free_memory.hpp  aa_device_harmonic_summing.hpp  aa_device_harmonic_summing_kernel.hpp  (+226 more)
input_files/: BenMeerKAT.txt  BenMeerKAT_periods.txt  aa_test_file_dm400_snr8.txt  aa_test_file_dm900_snr8.txt  header  jan_test_file.txt  lotaas_18.txt  lotaas_FRB.txt  ska_ania.txt  ska_b1.txt  ska_bin_8.txt  ska_full.txt  ska_karel.txt  ska_low.txt  ska_test_file.txt  ska_test_file_32b.txt  ska_tune.txt  test-dp-4.txt
lib/: .device_acceleration_fdas.cu.swo  .device_acceleration_fdas.cu.swp  .fdas_host.cu.swp  .host_analysis.cu.swp  .host_main_function.cu.swp  Backward.cmake  CMakeLists.txt  DedispersionPlan.cpp  InputData.cpp  Makefile  Makefile_52  OutputData.cpp  Parameters.cpp  Sps.cpp  UserInput.cpp  accumulator.hpp  characteristics.c  dcdflib.c  device_BLN.cu  device_BLN_kernel.cu  device_MSD.cu  device_MSD_BLN_grid.cu  device_MSD_BLN_grid_kernel.cu  device_MSD_BLN_pw.cu  device_MSD_BLN_pw_dp.out  device_MSD_BLN_pw_dp_kernel.out  device_MSD_BLN_pw_kernel.cu  device_MSD_grid.cu  device_MSD_grid_kernel.cu  device_MSD_legacy.cu  device_MSD_legacy_kernel.cu  device_MSD_limited.cu  device_MSD_limited_kernel.cu  device_MSD_normal_kernel.cu  device_MSD_outlier_rejection_kernel.cu  device_MSD_plane.cu  device_MSD_plane_kernel.cu  device_MSD_plane_profile.cu  device_MSD_shared_kernel_functions.cu  device_SNR_limited.cu  (+84 more)
lib/astroaccelerate/test/: CMakeLists.txt
lib/astroaccelerate/test/src/: AstroAccelerateTest.cpp  AstroAccelerateTest.h
lib/sps/test/: CMakeLists.txt
lib/sps/test/src/: SpsTest.cpp  SpsTest.h  gtest_Sps.cpp
lib/utils/test/: CMakeLists.txt
lib/utils/test/src/: gtest_utils.cpp
python/: analysis_with_aa.py  dedisp_with_aa.py  maximum_candidate.py  py_astro_accelerate.py  python_wrapper.py  singlepulse_with_aa.py  use_python.py
scripts/: astro-accelerate.sh  compileTimingData.orig  compileTimingData.sh  environment.sh  generateDedispersionKernelCode.sh  header_template.h  profiling.sh  profilingAveraged.sh  summariseProfilingData.sh  test.sh  unit_test_and_results.sh  writeHeaderFiles.sh  writeRangeParams.sh
src/: aa_analysis_plan.cpp  aa_analysis_strategy.cpp  aa_bin_gpu.cpp  aa_characteristics.cpp  aa_cheetah_input.cpp  aa_corner_turn.cpp  aa_ddtr_pipeline.cpp  aa_ddtr_strategy.cpp  aa_dedisperse.cpp  aa_device_MSD.cu  aa_device_MSD_normal_kernel.cu  aa_device_MSD_outlier_rejection_kernel.cu  aa_device_MSD_plane_profile.cu  aa_device_MSD_shared_kernel_functions.cu  aa_device_SNR_limited.cu  aa_device_SNR_limited_inplace_kernel.cu  aa_device_SNR_limited_kernel.cu  aa_device_SPS_inplace.cu  aa_device_SPS_inplace_kernel.cu  aa_device_SPS_long.cu  aa_device_SPS_long_kernel.cu  aa_device_acceleration_fdas.cu  aa_device_analysis.cu  aa_device_binning_kernel.cu  aa_device_convolution.cu  aa_device_convolution_kernel.cu  aa_device_corner_turn_kernel.cu  (+157 more)
tests/: CMakeLists.txt  test_ddtr_fakesignal_period.cmake  test_ddtr_fakesignal_period.cpp  test_ddtr_fakesignal_single.cmake  test_ddtr_fakesignal_single.cpp  test_ddtr_strategy_1.cmake  test_ddtr_strategy_1.cpp  test_ddtr_strategy_2.cmake  test_ddtr_strategy_2.cpp  test_device_memory_manager.cmake  test_device_memory_manager.cpp  test_device_memory_request.cmake  test_device_memory_request.cpp  test_filterbank_metadata_1.cmake  test_filterbank_metadata_1.cpp  test_periodicity_strategy_1.cmake  test_periodicity_strategy_1.cpp  test_single_pulse_search_scan_1.cmake  test_single_pulse_search_scan_1.cpp
(+272 files in other folders)
